# sotto

./: .gitignore  LICENSE  PLAN-dictation-workflow.md  README.md  docker-compose.yml  ios-polling-plan.md
.github/workflows/: publish.yml
ios/Sotto/Sotto/: SottoApp.swift
ios/Sotto/Sotto/Models/: Destination.swift  Recording.swift
ios/Sotto/Sotto/Services/: AudioRecorder.swift  DestinationStore.swift  JobPoller.swift  RecordingStore.swift  UploadManager.swift
ios/Sotto/Sotto/Sotto.xcodeproj/: project.pbxproj
ios/Sotto/Sotto/Views/: RecordingListView.swift  RecordingRow.swift  SettingsView.swift  WaveformView.swift
macos/SottoDictation/SottoDictation/: Info.plist  SottoDictation.entitlements  SottoDictationApp.swift
macos/SottoDictation/SottoDictation.xcodeproj/: project.pbxproj
macos/SottoDictation/SottoDictation/Models/: ServerConfig.swift  Transcription.swift
macos/SottoDictation/SottoDictation/Services/: AudioRecorder.swift  HotkeyManager.swift  PasteService.swift  TranscriptionService.swift  TranscriptionStore.swift
server/: Dockerfile  README.md  config.yaml.example  pyproject.toml
server/sotto/: __init__.py  classifier.py  cli.py  config.py  config.yaml.example  converters.py  db.py  dispatcher.py  orchestrator.py  receiver.py  reply_parser.py  service.py  worker.py
server/sotto/workflows/: build.yaml  plan.yaml
server/tests/: test_classifier.py  test_config.py  test_db.py  test_dispatcher.py  test_orchestrator.py  test_receiver.py  test_reply_parser.py  test_worker.py  test_workflows.py
(+7 files in other folders)
