[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sotto"
version = "0.1.0"
description = "Private voice transcription server — receive audio, transcribe locally, write clean text."
readme = "../README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Reed Shea" },
]
keywords = ["voice", "transcription", "whisper", "private", "self-hosted"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "faster-whisper>=1.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx",
    "ruff>=0.1",
]

[project.scripts]
sotto = "sotto.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
